# tudelft-nes-ppu

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  flake.nix
src/: cpu.rs  lib.rs  run.rs  screen.rs
src/ppu/: colors.rs  mirroring.rs  mod.rs  registers.rs
