[package]
name = "tudelft-nes-ppu"
version = "1.0.2"
edition = "2021"
authors = [
    "Victor Roest <victor@xirion.net>",
    "Jonathan Dönszelmann <jonabent@gmail.com>",
]
description = "support library for the 'software fundamentals' project for the TU Delft"
repository = "https://gitlab.ewi.tudelft.nl/software-fundamentals/graphics-library"
keywords = ["NES", "PPU", "tudelft"]
categories = ["emulators"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.9.0"
winit = "0.26.1"
itertools = "0.10.3"
